--- a/apps/basaltApp/templates/xgds_sample/sampleEditForm.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleEditForm.html
@@ -2,6 +2,7 @@
 
 {% block sitemenu-content-secondary %}
 	{% include "sample_subnav.html" %}
+    {% load nav %}
 {% endblock %}
 
  {% block cssExtras %}
