--- a/apps/basaltApp/templates/xgds_sample/sampleDashboardBase.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleDashboardBase.html
@@ -15,20 +15,16 @@
 	$(samplesJsonArray).each(function() {
 		samplesArray.push(JSON.parse(this)); // parse json string
 	});
-	var aoColumns = [			   {"width": "20%", "mRender": function(data, type, full) {
-										console.log("full is ", full)
-	                            	   return "<img src='#'></img>"
-	                               }},
-	                               {"mRender":function(data, type, full){
+	var aoColumns = [			   {"mRender":function(data, type, full){
 	                               		console.log("data is ", data);
+	                               		console.log("full is ", full);
 	                            	   var sampleName = full['name'];
 	                            	   var jsonString = JSON.stringify(full);
 	                                   return "<a onclick='constructSampleView(" + jsonString + ")'>"+ sampleName + "</a>";
 	                               }},
-								   {"mData": "type"},
-	                               {"mData": "number"},
+								   {"mData": "collection_time"},
 	                               {"mData": "region"},
-	                               {"mData": "triplicate"}
+	                               {"mData": "type"}
 	];
 	setupTable('item_samples_table', 'samples_table', samplesArray, aoColumns);
 {% endblock jsInitPreApp %}
@@ -59,12 +55,10 @@
 		<table cellpadding="0" cellspacing="0" border="0"  id="samples_table">
 			<thead class="table_header">
 				<tr>
-					<th></th>
 					<th>Name</th>
-					<th>Type</th>					
-				    <th>Number</th>
+					<th>Date</th>					
 				    <th>Region</th>
-				    <th>Triplicate</th>
+				    <th>Type</th>
 			    </tr>
 			</thead>
 			<tbody>
