--- a/apps/basaltApp/templates/xgds_sample/recordSample.html
+++ b/apps/basaltApp/templates/xgds_sample/recordSample.html
@@ -29,7 +29,7 @@
 		{% endfor %}
 	</ul>
 
-	<form class="label_number_form" id="label_number_form" action="{% url 'xgds_sample_edit' %}" method="post" enctype="multipart/form-data">
+	<form class="label_number_form" id="label_number_form" action="{% url 'xgds_sample_record_edit' %}" method="post" enctype="multipart/form-data">
 		<strong> Look up sample </strong>
 		<table>
 			<tr>
