--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -6,12 +6,14 @@
 
  {% block cssExtras %}
  {{ block.super }}
+  {% include "xgds_notes2/NoteCSS.html" %}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}xgds_sample/css/xgds_sample.css"></link>
  {% endblock cssExtras %}
 
 
 {% block scripts %}
 {{block.super}}
+	{% include "xgds_notes2/NoteJS.html" %}
 	<script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.min.js"></script>
 	<script type="text/javascript" src='{{ EXTERNAL_URL }}/handlebars/handlebars.min.js'></script>
     <!--  load handlebars -->
@@ -24,6 +26,33 @@
 
 {% block jsInit %} 
 {{ block.super }}
+
+// initialize the notes when the window is ready
+$(document).ready(function() {
+	var container = $('#notes_content');
+	var tbl = container.find('table#notes_list');
+	if ( $.fn.DataTable.isDataTable( tbl) ) {
+	    var dt = $(tbl).dataTable();
+	    dt.fnClearTable();
+	}
+	initializeNotesReference(container, '{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', '{{sample.collection_time|date:"Y-m-d H:i:s"}}' + ' UTC', '{{sample.collection_timezone}}');
+	getNotesForObject('{{sample.modelAppLabel}}', '{{sample.modelTypeName}}', '{{sample.pk }}', 'notes_content', tbl);
+	
+	// show the notes div
+	var notes_input_div = $("#notes_input");
+	notes_input_div.removeAttr('hidden');
+	notes_input_div.show();
+	
+    initializeTags();
+	var taginput = notes_input_div.find('.taginput');
+	initializeInput($(taginput)[0]);
+	hookNoteSubmit();
+	
+	//TODO this is a hack, for some reason the tags input is there twice but only the second one is valid
+//	var notes_content_div = $("#notes_content");
+//	notes_content_div.find(".bootstrap-tagsinput")[0].remove();
+});
+
 {% endblock jsInit %} 
 
 {% block otherJSInit %} 
@@ -32,7 +61,7 @@
 {% load xgds_sample_extras %}
 
 {% block firstPackery %} 
-<div class='item auto lockAspect' id='item_sample_create' tedata-isStamped="false">
+<div class='item w2 lockAspect' id='item_sample_create' data-isStamped="false">
 	<div class="error-message upload-error"></div>
 	<i class="icon-lock-open pinDiv"></i><br />
 	<div id="save-status"> {{status}} </div>
@@ -101,6 +130,13 @@
 			<td>{% timezone sample.collection_timezone %}{{ sample.collection_time|date:"Y-m-d H:i e" }}{% endtimezone %}</td>
 		</tr>
 	</table>
+	<div id="complete_notes">
+		<strong>Notes</strong>
+		<div id="notes_content" class="tab-content active">
+		{% include 'xgds_notes2/notes_input_include.html' %}
+		{% include 'xgds_notes2/notes_table_small.html' %}
+		</div>
+	</div>
 	{% csrf_token %}	
 </div>
 {{ block.super }}
