--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard_base.html' %}
 {% load tz %}
+{% load json_dumps %}
 {% block sitemenu-content-secondary %}
 	{% include "sample_subnav.html" %}
 {% endblock %}
@@ -31,8 +32,8 @@
 // initialize the notes when the window is ready
 $(document).ready(function() {
 
-	{% if sampleJson %}
-		showOnMap([{{ sampleJson|safe }}]);
+	{% if sample %}
+		showOnMap([{{sample.toMapDict|json_dumps|safe}}]);
 	{% endif %}
 	var container = $('#notes_content');
 	var tbl = container.find('table#notes_list');
