--- a/apps/basaltApp/templates/xgds_planner2/planIndex.html
+++ b/apps/basaltApp/templates/xgds_planner2/planIndex.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load tz %}
+{% load xgds_planner2_extras %}
 
 {% block cssExtras %}
 {{ block.super }}
@@ -42,8 +43,9 @@ table.planIndex td.exportFormat a {
     <th>Last Edit</th>
     <th>{{settings.XGDS_MAP_SERVER_SITE_MONIKER}}</th>
     <th>Dist</th>
+    <th>Time</th>
     <th>#Stn</th>
-    <th>#Commands</th>
+    <th>#Activities</th>
     {% if settings.XGDS_PLANNER2_SCHEDULE_INCLUDED %}
     <th>Scheduled</th>
     <th>EV</th>
@@ -61,6 +63,7 @@ table.planIndex td.exportFormat a {
     <td>{% timezone TIME_ZONE %}{{ plan.dateModified|date:"Y-m-d H:i e" }}{% endtimezone %}</td>
     <td>{{ plan.jsonPlan.site.name }}</td>
     <td class="right">{{ plan.lengthMeters|floatformat }}</td>
+    <td class="right">{{ plan.estimatedDurationSeconds | secstohms }}</td>
     <td class="center">{{ plan.numStations }}</td>
     <td >{{ plan.numCommands }} &nbsp;&nbsp;{{ plan.getSummaryOfCommandsByType|safe }}</td>
     {% if settings.XGDS_PLANNER2_SCHEDULE_INCLUDED %}
