--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -46,7 +46,7 @@
 				<a href="{% url 'xgds_image_search' %}" title="photo">Photo</a>
 			</li>
 			<li {% currentnav *xgds_sample* %} >
-				<a href="{% url 'xgds_sample_search' %}" title="sample">Sample</a>
+				<a href="{% url 'xgds_sample_labels' %}" title="sample">Sample</a>
 			</li>
  			<li {% currentnav *note* %}>
 				<a href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
@@ -130,6 +130,7 @@
 
     <script type="text/javascript">
       {% block jsSetVars %}
+      var defaultTimeZone = '{{TIME_ZONE}}';
       {% endblock jsSetVars %}
 
       {% block jsInit %}
