rest of sample save bug fixed

--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -69,7 +69,7 @@
 		</tr>
 		<tr>
 			<th><label for="id_type">Type:</label></th>
-			<td> {{ sample.type.display_name }}</td>
+			<td> {{ sample.sample_type.display_name }}</td>
 		</tr>
 		<tr>
 			<th><label for="id_region">Region:</label></th>
