--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -48,18 +48,18 @@
 
 
 {% block firstPackery %} 
-	{% if messages %}
-		<div id="messages" class='item '>
-	  		{% for message in messages %}
-	    	<p>{{ message }}</p>
-	    	{% endfor %}
-		</div>
-	{% endif %}
 <div class='item w2 lockAspect' id='item_sample_create' data-isStamped="false">
 	<div class="error-message upload-error"></div>
 	<i class="icon-lock-open pinDiv"></i><br />
-	<div id="save-status"> {{status}} </div>
 	
+	{% if messages %}
+	<ul class="messages">
+	    {% for message in messages %}
+	    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	    {% endfor %}
+	</ul>
+	{% endif %}
+
 	<div> <strong> Viewing sample</strong> <a id="edit_sample_button" href="../edit/{{ sample.label.number }}" class="mybutton small">Edit</a> </div>
 	<input type=hidden name=sampleId value="{{ sample.pk }}">
 	<table>
@@ -116,6 +116,7 @@
 			<td>{% timezone sample.collection_timezone %}{{ sample.collection_time|date:"Y-m-d H:i e" }}{% endtimezone %}</td>
 		</tr>
 	</table>
+	<hr>
 	<div id="complete_notes">
 		<strong>Notes</strong>
 		<div id="notes_content" class="tab-content active">
