--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -122,6 +122,10 @@
 			<th><label for="id_collection_time">Collection time:</label></th>
 			<td>{% timezone sample.collection_timezone %}{{ sample.collection_time|date:"Y-m-d H:i e" }}{% endtimezone %}</td>
 		</tr>
+		<tr>
+			<th><label for="id_description">Description:</label></th>
+			<td>{{ sample.description }}</td>
+		</tr>
 	</table>
 	<hr>
 	<div id="complete_notes">
