--- a/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
+++ b/apps/basaltApp/templates/xgds_planner2/ManageFlights.html
@@ -94,7 +94,7 @@ $('#id_today').change(function(e){
 
 $(document).ready( function () {
     defaultOptions['oLanguage'] = {
-        "sLengthMenu": "Display _MENU_ {{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s & Plans"
+        "sLengthMenu": "Display _MENU_ {{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s & {{ settings.XGDS_PLANNER2_PLAN_MONIKER}}s"
       };
     defaultOptions['ordering'] = false;
     defaultOptions['bSort'] = false;
