--- a/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
+++ b/apps/basaltApp/templates/xgds_planner2/schedule.handlebars
@@ -16,7 +16,7 @@
 		    </td>
 		</tr>
 		<tr>
-			<td><label for="id_schedule_ev">EV</label></td>
+			<td><label for="id_schedule_ev">Crew</label></td>
 			<td>
 			<select name="ev" id="id_ev">
     			{{#each evList}}
