adding marker id to sample and adding sample to admin

--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -92,7 +92,7 @@
 		</tr>
 		<tr>
 			<th><label for="id_number">Number:</label></th>
-			<td>{{ sample.label.number }}</td>
+			<td>{{ sample.number }}</td>
 		</tr>
 		<tr>
 			<th><label for="id_triplicate">Triplicate:</label></th>
