--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -51,6 +51,9 @@
  			<li {% currentnav *note* %}>
 				<a href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
 			</li>
+			<li {% currentnav search_map* %}>
+				<a href="{% url 'search_map' %}" title="Search">Search</a>
+			</li>
 			<li {% currentnav xgds_data_import %}>
 				<a href="{% url 'xgds_data_import' %}" title="Import">Import</a>
 			</li>
