Triplicate renamed to replicate. Triplicate options dynamically set to reflect sample type

--- a/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
+++ b/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
@@ -37,8 +37,8 @@
 			<td>{{ sample.label.number }}</td>
 		</tr>
 		<tr>
-			<th><label for="id_triplicate">Triplicate:</label></th>
-			<td>{{ sample.triplicate }}</td>
+			<th><label for="id_replicate">Replicate:</label></th>
+			<td>{{ sample.replicate }}</td>
 		</tr>	
 		<tr>
 			<th><label for="id_year">Year:</label></th>
