updated search params for sample and image and updated table columns for search results

--- a/apps/basaltApp/static/gumby/sass/_theme.scss
+++ b/apps/basaltApp/static/gumby/sass/_theme.scss
@@ -26,8 +26,9 @@ $dashboard-bgcolor: #e8e8e8;
 $button-border: #E5E5E5;
 
 /* sizes */
-$main-logo-height: 65px;
-$navbar-height: 37px;
+$main-logo-height: 80px;
+$main-logo-width: 250px;
+$navbar-height: 52px;
 $subnav-height: 22px;
 $footer-bg: #cccccc;
 $footer-height: 65px;
