siteframes are now models

--- a/apps/basaltApp/templates/base_bootstrap.html
+++ b/apps/basaltApp/templates/base_bootstrap.html
@@ -4,6 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
   	<meta charset="utf-8">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  	
     <title>
     {% block title %}{% block siteSection %}{% endblock siteSection%} {% block siteTitle %}BASALT{% endblock siteTitle%}{% endblock title%}
     </title>
@@ -90,9 +93,10 @@
    </div>
 {% endif %}
 	
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12" id="page-content">			
+			<div class="col-md-12" id="page-content">
+			<br/>
 	      	{% block contents %}
 	      		{% block content %}
 	      		{% endblock %}
