--- a/apps/basaltApp/templates/registration/login.html
+++ b/apps/basaltApp/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block siteSection %}Login{% endblock %}
 
 {% block contents %}
-<h3>Login - BASALT</h3>
+<h3>Login</h3>
 
 {% if form.errors %}
 <p>Invalid username or password. Please try again.</p>
