--- a/apps/basaltApp/templates/base.html
+++ b/apps/basaltApp/templates/base.html
@@ -40,7 +40,7 @@
 				<a href="{% url 'map' %}" title="Map">Map</a>
 			</li>
 			<li {% currentnav planner2* %}>
-				<a href="{% url 'planner2_index' %}" title="{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}">{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}</a>
+				<a href="{% url 'planner2_flownFlights' %}" title="{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}">{{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}</a>
 			</li>
  			<li {% currentnav *note* %}>
 				<a href="{% url 'xgds_notes_review' %}" title="{{ settings.XGDS_NOTES_MONIKER }}">{{ settings.XGDS_NOTES_MONIKER }}</a>
@@ -54,6 +54,11 @@
 			<li {% currentnav xgds_data_import %}>
 				<a href="{% url 'xgds_data_import' %}" title="Import">Import</a>
 			</li>
+			{% if settings.GEOCAM_UTIL_LIVE_MODE %}
+			<li {% currentnav *tatus* %}>
+            	<a href="{% url 'xgds_status_board_showSubsystemStatus' %}">Status</a>
+            </li>
+			{% endif %}
 			<li {% currentnav email_feedback %}>
             	<a href="{% url 'email_feedback' %}">Feedback</a>
             </li>
