--- a/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
+++ b/apps/basaltApp/templates/xgds_planner2/planner2_subnav.html
@@ -3,9 +3,8 @@
 <div class="sitemenu-nav-secondary">
 	<nav class="subnav">
 	<ul>
-		<li {% currentnav planner2_index %}><a href="{% url 'planner2_index' %}"> List {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a></li>
-		<li {% currentnav planner2_planCreate %}><a href="{% url 'planner2_planCreate' %}"> Create {{settings.XGDS_PLANNER2_PLAN_MONIKER}} </a></li>
-		<li {% currentnav planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan %}><a href="{% url 'planner2_manage' %}">Manage {{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a></li>
+		<li {% currentnav planner2_index %}><a href="{% url 'planner2_index' %}"> {{settings.XGDS_PLANNER2_PLAN_MONIKER}}s </a></li>
+		<li {% currentnav planner2_flownFlights planner2_manage planner2_startFlight planner2_stopFlight planner2_startPlan planner2_stopPlan %}><a href="{% url 'planner2_flownFlights' %}">{{settings.XGDS_PLANNER2_FLIGHT_MONIKER}}s</a></li>
 		<li {% currentnav planner2_edit_ev %}><a href="{% url 'planner2_edit_ev' %}"> Crew Mass </a></li>
 		<!-- 
 	    <li {% currentnav planner2_help %}><a href="{% url 'planner2_help' %}">Planner Help</a></li>
