--- a/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
+++ b/apps/basaltApp/templates/xgds_sample/sample-view.handlebars
@@ -1,70 +1,67 @@
-<div class="item w2 lockAspect" id="item_{{ name }}" data-isStamped="false">  
-	<div id="sample_view">
-		<i class="icon-cancel-circled"></i>
-		<i class="icon-lock-open pinDiv"></i>
-		<div class="small default btn icon-right entypo icon-window" id="new-window-btn"><a href="#" id="new-window-target" target="_blank">New Window</a></div>
-		
-		<button class="small info btn prev-button"><i class="icon-left-dir"></i></button>
-		<div class="sample-name" ><strong> {{ name }} </strong></div>
-		<button class="small info btn next-button"><i class="icon-right-dir"></i></button>
-		
-		<div> <strong> Viewing sample</strong> <a id="edit_sample_button" href="../edit/{{ sample.label.number }}" class="mybutton small">Edit</a> </div>
-		<input type=hidden name=sampleId value="{{ sample.pk }}">
-		
-		<table>
+<div> <strong>Sample</strong> <a id="edit_sample_button" href="/xgds_sample/edit/{{pk}}" class="mybutton small" target="_blank">Edit</a> </div>
+	<table>
 		<tr>
 			<th><label for="id_name">Name:</label></th>
-			<td> {{ sample.name }}</td>
+			<td>{{name}}</td>
 		</tr>
 		<tr>
-			<th><label for="id_type">Type:</label></th>
-			<td> {{ sample.type.display_name }}</td>
+			<th><label for="id_name">Label #:</label></th>
+			<td>{{label}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_region">Region:</label></th>
-			<td>{{ sample.region.name }}</td>
+			<td>{{region}}</td>
 		</tr>
 		<tr>
-			<th><label for="id_resource">Resource:</label></th>
-			<td>{{ sample.resource.name }}</td>
+			<th><label for="id_year">Year:</label></th>
+			<td> {{year}}</td>
 		</tr>
 		<tr>
-			<th><label for="id_collector">Collector:</label></th>
-			<td>{{ sample.collector }}</td>
+			<th><label for="id_type">Sample Type:</label></th>
+			<td>{{sample_type}}</td>
 		</tr>
 		<tr>
-			<th><label for="id_number">Number:</label></th>
-			<td>{{ sample.label.number }}</td>
+			<th><label for="id_number">Sample Location #:</label></th>
+			<td>{{number}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_replicate">Replicate:</label></th>
-			<td>{{ sample.replicate }}</td>
+			<td>{{replicate}}</td>
 		</tr>	
 		<tr>
-			<th><label for="id_year">Year:</label></th>
-			<td> {{ sample.year }}</td>
-		</tr>
-		<tr>
-			<th><label for="id_flight">Flight:</label></th>
-			<td>{{ sample.flight.name }}</td>
-		</tr>
-		<tr>
-			<th><label for="id_latitude">Latitude:</label></th>
-			<td>{{ sample.user_position.latitude }}</td>
-		</tr>
-		<tr>
-			<th><label for="id_longitude">Longitude:</label></th>
-			<td>{{ sample.user_position.longitude }}</td>
-		</tr>
-		<tr>
-			<th><label for="id_altitude">Altitude:</label></th>
-			<td>{{ sample.user_position.altitude }}</td>
+			<th><label for="id_collector">Collector:</label></th>
+			<td>{{collector}}</td>
 		</tr>
 		<tr>
 			<th><label for="id_collection_time">Collection time:</label></th>
-			<td>{% timezone sample.collection_timezone %}{{ sample.collection_time|date:"Y-m-d H:i e" }}{% endtimezone %}</td>
+			<td>{{prettyTime collection_time collection_timezone}}</td>
+		</tr>
+		<tr>
+			<th><label for="marker_id">Marker ID:</label></th>
+			<td>{{marker_id}}</td>
+		</tr>
+		<tr>
+			<th><label for="id_description">Description:</label></th>
+			<td>{{description}}</td>
+		</tr>
+		<tr>
+			<th><label for="id_resource">Resource:</label></th>
+			<td>{{resource}}</td>
+		</tr>
+		<tr>
+			<th><label for="id_flight">EVA:</label></th>
+			<td>{{flight}}</td>
+		</tr>
+		<tr>
+			<th><label for="id_latitude">Latitude:</label></th>
+			<td>{{lat}}</td>
+		</tr>
+		<tr>
+			<th><label for="id_longitude">Longitude:</label></th>
+			<td>{{lon}}</td>
+		</tr>
+		<tr>
+			<th><label for="id_altitude">Altitude:</label></th>
+			<td>{{alt}}</td>
 		</tr>
 	</table>
-
-		<input class="small info btn" type="submit" id="updateSampleInfoSubmit" value="Save" />	
-</div>
