--- a/apps/basaltApp/templates/xgds_sample/sampleView.html
+++ b/apps/basaltApp/templates/xgds_sample/sampleView.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard_base.html' %}
+{% load userName %}
 {% load tz %}
 {% load json_dumps %}
 {% block sitemenu-content-secondary %}
@@ -82,7 +83,7 @@
 		</tr>
 		<tr>
 			<th><label for="id_collector">Collector:</label></th>
-			<td>{{ sample.collector }}</td>
+			<td>{% userName sample.collector %}</td>
 		</tr>
 		<tr>
 			<th><label for="id_number">Number:</label></th>
