starting to work on flot

--- a/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
+++ b/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
@@ -42,4 +42,7 @@
 			<td>{{alt}}</td>
 		</tr>
 		{{/if}}
+		<div class="plot-container">
+			<div id="plotDiv" class="demo-placeholder"></div>
+		</div>
 	</table>
