download csv of instrument data

--- a/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
+++ b/apps/basaltApp/templates/xgds_instrument/handlebars/instrument-view.handlebars
@@ -37,6 +37,10 @@
 		</tr>
 		{{/if}}
 		<tr>
+			<th><label for="id_csv_data">CSV data file:</label></th>
+			<td><a href="{{csv_data}}">CSV</a></td>
+		</tr>
+		<tr>
 			<th><label for="id_latitude">Latitude:</label></th>
 			<td>{{lat}}</td>
 		</tr>
